--- a/SmartFarm/mainwindow.ui
+++ b/SmartFarm/mainwindow.ui
@@ -14,88 +14,93 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QPushButton" name="addButton">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>40</y>
-      <width>113</width>
-      <height>21</height>
+      <x>320</x>
+      <y>28</y>
+      <width>93</width>
+      <height>28</height>
      </rect>
     </property>
+    <property name="minimumSize">
+     <size>
+      <width>93</width>
+      <height>28</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>16777215</width>
+      <height>28</height>
+     </size>
+    </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string>add</string>
+    </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="flushButton">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>40</y>
+      <x>320</x>
+      <y>440</y>
       <width>93</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>flush</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="deleteButton">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>100</y>
+      <x>320</x>
+      <y>234</y>
       <width>93</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>delete</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="changeButton">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>220</y>
+      <x>320</x>
+      <y>131</y>
       <width>93</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>change</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="searchButton">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>290</y>
+      <x>320</x>
+      <y>337</y>
       <width>93</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>search</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QTableView" name="tableView">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>350</y>
-      <width>93</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
-   <widget class="QTableWidget" name="tableWidget">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>140</y>
-      <width>431</width>
-      <height>291</height>
+      <x>10</x>
+      <y>30</y>
+      <width>256</width>
+      <height>441</height>
      </rect>
     </property>
    </widget>
