--- a/SmartFarm/add.ui
+++ b/SmartFarm/add.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>新增页面</string>
   </property>
   <widget class="QPushButton" name="addButton">
    <property name="geometry">
