--- a/SmartFarm/search.ui
+++ b/SmartFarm/search.ui
@@ -6,25 +6,25 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>721</width>
-    <height>632</height>
+    <width>508</width>
+    <height>607</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>查找页面</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_4">
-   <item>
-    <widget class="QTableView" name="tableView"/>
-   </item>
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="1" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>根据不同种类进行查找</string>
      </property>
     </widget>
    </item>
-   <item>
+   <item row="0" column="0">
+    <widget class="QTableView" name="tableView"/>
+   </item>
+   <item row="2" column="0">
     <widget class="QWidget" name="widget_5" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
